@@ -66,7 +66,7 @@ jobs:
 
       - name: Set default Git config
         run: |
-          git config --global init.defaultBranch master
+          git config --global init.defaultBranch main
           git config --global user.email "test@example.com"
           git config --global user.name "Test"
 
