@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+- The default branch is now C<main> instead of C<master>.
+
 1.001000 2021-01-19
 
 - Support retrieving the Pivotal Tracker token from the environment variable
